--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "AndreTupinamba/soaTest"]
 	path = AndreTupinamba/soaTest
 	url = https://github.com/andrelrt/soaTest.git
+[submodule "WanderleyCaloni/GitIndex"]
+	path = WanderleyCaloni/GitIndex
+	url = https://github.com/Caloni/GitIndex
